# new_project_jk

./: .gitignore  README.md  pyproject.toml
docs/: requirements-dev.txt  requirements.txt
new_project_jk/config/: settings.py
new_project_jk/src/: aleutian.py  chishima.py  main.py
new_project_jk/src/utils/: logger.py
new_project_jk/utils/: logger.py
src/config/: settings.py
src/new_project_jk/: aleutian.py  chishima.py  main.py
src/new_project_jk/utils/: logger.py
src/tests/tmp/: test_practice.py
src/tests/utils/: test_logger_get_logger_正常系.py
src/tmp/: practice.py
src/utils/: logger.py
tests/: test_logger.py
tests/utils/: test_logger_get_logger_正常系.py
