[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new_project_jk"
version = "0.1.0"
description = "A simulation RPG game project"
authors = [
    { name="NewBarrel", email="newbarrel@example.com" }
]
license = { text = "Copyright © 2024.11.30 NewBarrel. All rights reserved." }
dependencies = [
    "pygame>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["new_project_jk"]