[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new_project_jk"
version = "0.0.2"
description = "A simulation RPG game project"
authors = [
    { name="NewBarrel", email="newbarrel@example.com" }
]
license = { text = "Copyright © 2024.12.01 NewBarrel. All rights reserved." }
dependencies = [
    "pygame>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]  # リストとして指定
include = ["new_project_jk*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
